example/lib/src/l10n/errors/app_sw.arb
{
  "@@locale": "sw",
  "error": "Hitilafu imetokea",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Hitilafu isiyotarajiwa imetokea",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Ripoti ya hitilafu imetumwa kwa mafanikio.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}